--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
         <!-- endbuild -->
     </head>
     <body>
-
+        <div id="viewContent"></div>
 
 
         <!-- build:js scripts/vendor.js -->
