View och model för spel-sidan.

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,8 @@
         <script src="scripts/views/application.js"></script>
         <script src="scripts/models/application.js"></script>
         <script src="scripts/collections/application.js"></script>
+        <script src="scripts/views/spela.js"></script>
+        <script src="scripts/models/spela.js"></script>
         <!-- endbuild -->
 </body>
 </html>
