--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,8 @@
 
     <!-- include source files here... -->
 
+    <script src="test/views/spela.js"></script>
+    <script src="test/models/spela.js"></script>
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
 
