--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Application</title>
+        <title>Start</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -17,7 +17,6 @@
     <body>
         <div id="viewContent"></div>
 
-
         <!-- build:js scripts/vendor.js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/underscore/underscore.js"></script>
@@ -25,14 +24,17 @@
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/main.js -->
+
         <script src="scripts/main.js"></script>
-        <script src="scripts/templates.js"></script>
         <script src="scripts/routes/application.js"></script>
-        <script src="scripts/views/application.js"></script>
-        <script src="scripts/models/application.js"></script>
-        <script src="scripts/collections/application.js"></script>
+
+        <script src="scripts/views/start.js"></script>
+        <script src="scripts/models/start.js"></script>
+        <script src="scripts/templates/start.js"></script>
+
         <script src="scripts/views/spela.js"></script>
         <script src="scripts/models/spela.js"></script>
+        <script src="scripts/templates/spela.js"></script>
         <!-- endbuild -->
 </body>
 </html>
