--- a/test/index.html
+++ b/test/index.html
@@ -21,6 +21,8 @@
 
     <script src="test/views/spela.js"></script>
     <script src="test/models/spela.js"></script>
+    <script src="test/views/start.js"></script>
+    <script src="test/models/start.js"></script>
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
 
