--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     </head>
     <body>
         <div id="viewContent"></div>
+        <div id="viewSpela"></div>
 
         <!-- build:js scripts/vendor.js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -29,7 +30,7 @@
         <script src="scripts/main.js"></script>
         <script src="scripts/routes/application.js"></script>
         <script src="scripts/templates.js"></script>
-        
+
         <script src="scripts/views/start.js"></script>
         <script src="scripts/models/start.js"></script>
 
