Favicons och lite småpill.

--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Start</title>
-        <meta name="description" content="">
+        <title>Blurry</title>
+        <meta name="description" content="Bildgissningsspel med 80-tals touch">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.tmp) styles/main.css -->
