--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
         <script src="bower_components/underscore/underscore.js"></script>
         <script src="bower_components/backbone/backbone.js"></script>
         <script src="bower_components/handlebars/handlebars.js"></script>
+        <script src="bower_components/oauth.io/oauth.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/main.js -->
